5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3999/executions/1635_2445.log
== TEST (2019-04-08 14:33:58) 
-- CODE:
T=input("C ou F")
V=float(input("valor da temperatura:"))
C=5/9*(V-32)
F=9/5*V+32
if(T=="C"):
	print(round(C,2))
else:
	print(round(F,2))
	

-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:34:29) 
-- CODE:
T=input("C ou F")
V=float(input("valor da temperatura:"))
C=5/9*(V-32)
F=9/5*(V+32)
if(T=="C"):
	print(round(C,2))
else:
	print(round(F,2))
	

-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:35:10) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
C=5/9*(V-32)
F=9/5*(V+32)
if(T=="C"):
	print(round(C,2))
else:
	print(round(F,2))
	

-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:36:24) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
C=(5*(V-32))/9
F=(9*(V+32))/5
if(T=="C"):
	print(round(C,2))
else:
	print(round(F,2))
	

-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:36:57) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
C=(5*(V-32))/9
F=(9*(V+32))/5
if(T=="C"):
	print(round(C,2))
else:
	print(round(F,2))
	

-- EXECUTION TIME:
0.145042
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
633.6
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:37:56) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
C=(5*(V-32))/9
F=(9*(V+32))/5
if(T=="C"):
	print(round(C,2))
else:
	print(round(F,2))
	

-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:41:32) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
C=(5/9)*(V-32)
F=9/5*C + 32
if(T=="C"):
	print(round(C,2))
else:
	print(round(F,2))
	

-- EXECUTION TIME:
0.213476
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
320.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:41:52) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
C=(5/9)*(V-32)
F=9/5*V+ 32
if(T=="C"):
	print(round(C,2))
else:
	print(round(F,2))
	

-- EXECUTION TIME:
0.122838
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:41:54) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
C=(5/9)*(V-32)
F=9/5*V+ 32
if(T=="C"):
	print(round(C,2))
else:
	print(round(F,2))
	

-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:42:42) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
C=(5/9)*(V-32)
F=9/5*V+ 32
if(T=="C"):
	print(round(C,2))
else:
	print(round(F,2))
	

-- EXECUTION TIME:
0.13431
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:42:55) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
C=(5/9)*(V-32)
F=9/5*V+ 32
if(T=="C"):
	print(round(C,2))
else:
	print(round(F,2))
	

-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:43:50) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
C=(5/9)*(V-32)
F=(9*V)/5 +32
if(T=="C"):
	print(round(C,2))
else:
	print(round(F,2))
	

-- EXECUTION TIME:
0.166992
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:43:53) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
C=(5/9)*(V-32)
F=(9*V)/5 +32
if(T=="C"):
	print(round(C,2))
else:
	print(round(F,2))
	

-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:46:04) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
C=(5/9)*(V-32)
F=(9*V+32)/5
if(T=="C"):
	print(round(C,2))
else:
	print(round(F,2))
	

-- EXECUTION TIME:
0.167186
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
582.4
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:48:42) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
C=(5/9)*(V-32)
F=(9*V/5)+32
if(T=="C"):
	print(round(C,2))
else:
	print(round(F,2))
	

-- EXECUTION TIME:
0.166156
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:48:45) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
C=(5/9)*(V-32)
F=(9*V/5)+32
if(T=="C"):
	print(round(C,2))
else:
	print(round(F,2))
	

-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:49:36) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
C=(5*(V-32))/9
F=(9*V/5)+32
if(T=="C"):
	print(round(C,2))
else:
	print(round(F,2))
	

-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:51:33) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
if(T=="C"):
	C=(5*(V-32))/9
	print(round(C,2))
else:
	F=(9*V/5)+32
	print(round(F,2))
	

-- EXECUTION TIME:
0.155045
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:51:35) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
if(T=="C"):
	C=(5*(V-32))/9
	print(round(C,2))
else:
	F=(9*V/5)+32
	print(round(F,2))
	

-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:52:55) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
if(T=="C"):
F=(9*V/5)+32
	print(round(F,2))
else:
	C=(5*(V-32))/9
	print(round(C,2))

-- ERROR:
File "XXXX", line 4
    F=(9*V/5)+32
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:54:36) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
if(T=="C"):
    F=(9*V)/5 +32
	print(round(F,2))
else:
	C=(5*(V-32))/9
	print(round(C,2))

-- ERROR:
File "XXXX", line 5
    print(round(F,2))
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:58:54) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
if(T=="C"):
	F=(9*V)/5 +32
	print(round(F,2))
else:
    C=(5*(V-32))/9
	print(round(C,2))


-- ERROR:
File "XXXX", line 8
    print(round(C,2))
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:00:05) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
if(T=="C"):
	F=(9*V)/5 +32
	print(round(F,2))
else:
    C=(5*(V-32))/9
   print(round(C,2))


-- ERROR:
File "XXXX", line 8
    print(round(C,2))
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:04:27) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
C=(5*V-5*32)/9
F=((9*V)/5 + 32)
if(T=="C"):
	print(round(F,2))
else:
	print(round(C,2))
  


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:05:29) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
C=(5*V-5*32)/9
F=((9*V)/5 + 32)
if(T=="C"):
	print(round(F,2))
else:
	print(round(C,2))
  


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:08:26) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
C=(5*V-5*32)/9
F=((9*V/5)+32
if(T=="C"):
	print(round(F,2))
else:
	print(round(C,2))
  


-- ERROR:
File "XXXX", line 5
    if(T=="C"):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:08:51) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
C=(5*V-5*32)/9
F=((9*V/5)+32)
if(T=="C"):
	print(round(F,2))
else:
	print(round(C,2))
  


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:09:07) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
C=(5*V-5*32)/9
F=((9*V/5)+32)
if(T=="C"):
	print(round(F,2))
else:
	print(round(C,2))
  


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:09:20) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
C=(5*V-5*32)/9
F=((9*V/5)+32)
if(T=="C"):
	print(round(F,2))
else:
	print(round(C,2))
  


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:10:41) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
C=(5*V-5*32)/9
F=((9*V/5)+32)
if(T=="C"):
	print(round(F,2))
else:
	print(round(C,2))
  


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:10:58) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
C=(5*V-5*32)/9
F=((9*V/5)+32)
if(T=="C"):
	print(round(F,2))
else:
	print(round(C,2))
  


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:11:19) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
C=(5*V-5*32)/9
F=((9*V/5)+32)
if(T=="C"):
	print(round(F,2))
else:
	print(round(C,2))
  


-- EXECUTION TIME:
0.134092
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:25:31) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
C=(5*V-5*32)/9
F=((9*V/5)+32)
if(T=="C"):
	print(round(F,2))
else:
	print(round(C,2))
  


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:21:14) 
-- CODE:
T=input("C ou F: ")
V=float(input("valor da temperatura:"))
C=(5*V-5*32)/9
F=((9*V/5)+32)
if(T=="C"):
	print(round(F,2))
else:
	print(round(C,2))
  


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
